# VoltScript

./: .gitignore  CMakeLists.txt  README.md  debug.volt  temp_error_test.volt  temp_error_test2.volt  temp_json_test.volt  temp_v075_test.volt
examples/: factorial.volt  fibonacci.volt  fizzbuzz.volt  hash_maps.volt  nested_loops.volt  run_until_loop.volt  scope_demo.volt  v075_demo.volt
src/: array.cpp  array.h  ast.cpp  ast.h  environment.cpp  environment.h  evaluator.cpp  evaluator.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  stmt.h  token.cpp  token.h  value.cpp  value.h
src/features/: hashmap.cpp  hashmap.h
src/interpreter/: interpreter.cpp  interpreter.cpp.backup  interpreter.h  value.cpp  value.h
src/lexer/: lexer.cpp  token.cpp  token.h
src/parser/: ast.h  parser.cpp  parser.h  stmt.h
tests/: test_arrays.cpp  test_enhanced_features.cpp  test_evaluator.cpp  test_hash_maps.cpp  test_interpreter.cpp  test_lexer.cpp  test_parser.cpp  test_run_until.cpp  test_v075_features.cpp  test_v075_simple.cpp
